--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: JT Maths
+description: Free school maths help, questions and answers!
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://jtmaths.org/
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  GitHub: https://github.com/jtmaths/jtmaths.github.io
